# starsling-ci-optimizer

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: unoptimized-nextjs.yml
examples/real-world/: better-auth-ci.yml
src/: analyzer.py  cli.py  feedback.py  llm.py  models.py  server.py
src/rules/: __init__.py  actions.py  caching.py  concurrency.py  install.py  parallelization.py  redundancy.py  sharding.py
tests/: test_analyzer.py  test_feedback.py  test_rules.py
