[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "starsling-ci-optimizer"
version = "0.1.0"
description = "An MCP server that analyzes GitHub Actions workflows and suggests optimizations"
requires-python = ">=3.11"
license = "MIT"
dependencies = [
    "mcp[cli]>=1.0.0",
    "pyyaml>=6.0",
    "click>=8.1.0",
    "anthropic>=0.40.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23.0",
]

[project.scripts]
ci-optimizer = "src.cli:main"